Doubts.txt
//Logical Doubts :
1) JRE present in latest jdk 
2) Env Variable 

//Explicit Conversion 
int i = 128;
byte b = (byte) i;
getting doubt - https://stackoverflow.com/questions/28351898/explicit-conversion-from-int-to-byte-in-java

************************************************************************

//PreIncrement and PostIncrement
class Hello {
    public static void main (String arg[])
    {
      int a = 50 ;
      int ans = a++ ;  //ans = a = a+1 ; ans = 50 a = 51
      int ans_1 = ++a ;// ans_1 = a+1 ;since a is already 51 in previous statement now again increments by 1 
      System.out.println(ans); //50
      System.out.println(ans_1);//52

    }
}
----------------------------------------------------------------------

class Hello {
  public static void main (String arg[]){
  int a = 10 ;
  int b = a++ ; //(b = (a=(a+1)))
  int c = b++ ;//If this line commented it gives different value else gives different value 
  System.out.println("b : " + b);
  System.out.println("c : " + c);//same here 
  }

}
--------------------------------------------------------------------------------------
While loop doubt : 
class Hello {
  public static void main (String args[]){
    
    while(true){
      System.out.println("Inside while : ");
    }
     System.out.println("Outside while ");
  }
}

error : 
Hello.java:7: error: unreachable statement
     System.out.println("Outside while ");
     ^
1 error
***************************************
//Ternary Operator - To Find Largest of 3 Numbers 

//We can directly print the ternary operator using sout 
class Hello {
    public static void main (String arg[])
    {
      int a = 10 ;
      int b = 122 ;
      int c = 14 ;
      System.out.println(a>b ? a : b>c ? b : c);
    }
}
//But below is not possible === > void cannot be converted to int
class Hello {
    public static void main (String arg[])
    {
      int a = 10 ;
      int b = 122 ;
      int c = 14 ;
      int result = a>b ? a : b>c ? b : System.out.println(c) ;
      System.out.println(result);
    }
}

//Ternary Operator - To Find Odd or Even Numbers 
// Getting Error String cannot be converted to Int

class Hello {
    public static void main (String arg[])
    {
      int n= 200 ;
      int result = n%2 == 0 ? "even" : "odd" ;
      System.out.println(result);
    }
}
//To avoid above one replace int by var 
class Hello {
    public static void main (String arg[])
    {
      int n= 200 ;
      var result = n%2 == 0 ? "even" : "odd" ;
      System.out.println(result);
    }
}
//Note : Also var result ; cannot be present individually 
//Below throws this error --- > (cannot use 'var' on variable without initializer)
class Hello {
    public static void main (String arg[])
    {
      int n= 200 ;
      var result;
      result = n%2 == 0 ? "even" : "odd" ;
      System.out.println(result);
    }
}
---------------------------------------------------------------------------------------
To write bitwise operator in if else loop ---> check 
How really a jvm looks .
Why filename and class should be same when giving as public 

*********************************************************
Do While Loop while running in debug mode I got doubt 
class Hello {
  public static void main (String arg []){
    int i = 2 ;
    do{
      System.out.println("i : " + i);
      i++;
    }while (i<=4);
    System.out.println("Out Of Do While : " + i );
  }
}

**********************************************************
Why it throws error when I didnt specify datatype inside method 
class Sum{
  int i;
  int j;
  public void Addition(i,j){
     System.out.println(i+j);
  }
}

class Hello{
  public static void main (String arg[]){
    int a = 10;
    int b = 20;
    Sum s = new Sum();//created a new object
    s.Addition(10,20);//calling Addition Method from Hello Class by giving s as reference variable of Sum class
  }
}
******************************************************
doubt -
javac Hello.java
java Hello

But shortcut java Hello.java didnt work when after creating new class 

******************************************************************************************
Doubt : We have given "static String stud_name" but havent assigned any value , but still it takes and assign the b.section value to both 'a' and 'b' object . Why not 'a' object .

class School{
    String std ;
    String section;
    static String stud_name ;

    public void showDetails(){
      System.out.println("The student name is : " + stud_name + " And Section is : " + section + " And Standard is : " + std);
    }
}
class Hello {
  public static void main (String args[]){
    School a = new School();
    a.stud_name = "Ilakkiya";
    a.section = "A" ;
    a.std = "X";

    School b = new School();
    b.stud_name = "Kavya";
    b.section = "C" ;
    b.std = "XII";

    a.showDetails();
    b.showDetails();
   
  }

O/P :
The student name is : Kavya And Section is : A And Standard is : X
The student name is : Kavya And Section is : C And Standard is : XII
}


